--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,8 @@ nav:
     - Architecture: explanations/02_architecture.md
     - Payment Resilience: explanations/03_payment_resilience.md
   - References:
-    - API Reference: openapi-spec/index.html
+    - API Overview: references/05_api_overview.md
+    - API Console: openapi-spec/index.html
     - Python SDK: references/06_sdk_python.md
     - TypeScript SDK: references/07_sdk_typescript.md
     - Compliance & Security: references/08_compliance_security.md
