--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,20 +39,15 @@ plugins:
       default_image: https://aitechnicalwriter.github.io/qapi-docs/assets/images/qapi-linkedin.png
       add_desc: True
 
-plugins:
-  - search
-  # Keep ultralytics if you want the other features, but we'll add explicit tags below
-
 extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/aitechnicalwriter
   
-  # This explicitly tells the theme to create the og:image tag
   opengraph:
     image: https://aitechnicalwriter.github.io/qapi-docs/assets/images/qapi-linkedin.png
-    title: CASE STUDY: API Documentation for QBank Connect
-    description: API documentation and integration guide for the QBank Connect API.
+    title: CASE STUDY - API Documentation for QBank Connect.
+    description: API documentation and integration guide for QBank Connect API.
     
 markdown_extensions:
   - footnotes
